# zei-quizz

./: .env.example  .gitignore  PARTNERS.md  PLAN.md  PROJECTS.md  README.md  STEPS.md  TEMPLATE_ACTION_PLAN.md  UPDATE.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
agent/: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
agent/mcp-servers/uns-mcp/: pyproject.toml
app/: globals.css  layout.tsx  page.tsx
components/: app-sidebar.tsx  background-selector.tsx  dashboard-scroll-area.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  signup-form.tsx
drizzle/: 0000_high_mindworm.sql  0001_messy_the_captain.sql  0002_clammy_quicksilver.sql
hooks/: use-debounced-callback.ts  use-scroll.ts  use-toc.ts
lib/: account-context.ts  achievements.ts  auth.ts  authz.ts  db-errors.ts  db.ts  gradient-generator.ts  quiz-metadata.ts  quiz-zei-enriched.ts  resources.ts  schema.ts  toc-context.tsx  zei-callout-resolve-links.ts  zei-knowledge-public-urls.ts  zei-knowledge-suggested-prompts.ts
scripts/: extract-zei-pdfs.py  migrate-quiz.ts  migrate-rbac-role-values.sql  seed-csrd.ts  seed-esg.ts  seed-obligations-2025-2026.ts  seed-rse-marketing.ts  seed-rse.ts  seed-zei-rse.ts  set-user-role.ts  setup-database.sh  sync-zei-knowledge.sh
setup/: 00-GUIDE-PRINCIPAL.md  01-INITIALISATION-ET-DEPENDANCES.md  02-CONFIGURATION-DE-BASE.md  03-STRUCTURE-DES-FICHIERS.md  04-BASE-DE-DONNEES.md  05-AUTHENTIFICATION.md  06-THEMES.md  07-SIDEBAR.md  08-BREADCRUMBS.md  09-TOASTS.md  10-SKELETONS.md  (+2 more)
(+263 files in other folders)
